--- a/force-app/main/default/classes/Tests/FileSyncExecutionTest.cls
+++ b/force-app/main/default/classes/Tests/FileSyncExecutionTest.cls
@@ -1,3 +1,10 @@
+/**
+ * Test class for FileSyncExecution components.
+ * Validates the execution orchestration logic including batch job scheduling and mode handling.
+ *
+ * @author Mritesh Adak
+ * @since 1.0
+ */
 @isTest
 private class FileSyncExecutionTest {
     @testSetup
